test/JDBC/expected/BABEL-328-vu-verify.out
SELECT * FROM babel_328_vu_v1
GO
~~START~~
varchar
Engineering
Administration
Sales
Sales
~~END~~


SELECT * FROM babel_328_vu_v2
GO
~~START~~
varchar
Engineering
Administration
Sales
Sales
~~END~~


SELECT * FROM babel_328_vu_v3 ORDER BY NAME
GO
~~START~~
varchar
Administration
Engineering
Finance
Marketing
Sales
Sales
~~END~~


SELECT * FROM babel_328_vu_v4 ORDER BY NAME
GO
~~START~~
varchar
Administration
Engineering
Finance
Marketing
Sales
Sales
~~END~~


EXEC babel_328_vu_p1
GO
~~START~~
int#!#varchar#!#int#!#varchar#!#varchar#!#int
1#!#Engineering#!#1#!#Orlando#!#Gee#!#1
2#!#Administration#!#2#!#Keith#!#Harris#!#2
3#!#Sales#!#3#!#Donna#!#Carreras#!#3
3#!#Sales#!#4#!#Janet#!#Gates#!#3
~~END~~


EXEC babel_328_vu_p2
GO
~~START~~
int#!#varchar#!#int#!#varchar#!#varchar#!#int
3#!#Sales#!#3#!#Donna#!#Carreras#!#3
3#!#Sales#!#4#!#Janet#!#Gates#!#3
~~END~~


EXEC babel_328_vu_p3
GO
~~START~~
int#!#varchar#!#int#!#varchar#!#varchar#!#int
1#!#Engineering#!#1#!#Orlando#!#Gee#!#1
2#!#Administration#!#2#!#Keith#!#Harris#!#2
3#!#Sales#!#3#!#Donna#!#Carreras#!#3
3#!#Sales#!#4#!#Janet#!#Gates#!#3
4#!#Marketing#!#<NULL>#!#<NULL>#!#<NULL>#!#<NULL>
5#!#Finance#!#<NULL>#!#<NULL>#!#<NULL>#!#<NULL>
~~END~~


EXEC babel_328_vu_p4
GO
~~START~~
int#!#varchar#!#int#!#varchar#!#varchar#!#int
3#!#Sales#!#3#!#Donna#!#Carreras#!#3
3#!#Sales#!#4#!#Janet#!#Gates#!#3
~~END~~


SELECT * FROM babel_328_vu_v5
GO
~~START~~
int#!#int#!#int#!#int#!#int#!#int
1#!#1#!#3#!#3#!#5#!#5
1#!#1#!#3#!#3#!#6#!#6
1#!#1#!#4#!#4#!#5#!#5
1#!#1#!#4#!#4#!#6#!#6
2#!#2#!#3#!#3#!#5#!#5
2#!#2#!#3#!#3#!#6#!#6
2#!#2#!#4#!#4#!#5#!#5
2#!#2#!#4#!#4#!#6#!#6
~~END~~


SELECT * FROM babel_328_vu_v6
GO
~~START~~
int#!#int#!#int#!#int#!#int#!#int
1#!#1#!#3#!#3#!#5#!#5
1#!#1#!#4#!#4#!#5#!#5
1#!#1#!#3#!#3#!#6#!#6
1#!#1#!#4#!#4#!#6#!#6
2#!#2#!#3#!#3#!#5#!#5
2#!#2#!#4#!#4#!#5#!#5
2#!#2#!#3#!#3#!#6#!#6
2#!#2#!#4#!#4#!#6#!#6
~~END~~


SELECT * FROM babel_328_vu_f2()
GO
~~START~~
datetime
2021-12-12 00:00:00.0
~~END~~


--These calls should return an error
SELECT * FROM babel_328_vu_t1 D
CROSS babel_328_vu_t2 E
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near 'babel_328_vu_t2' at line 3 and character position 6)~~


SELECT * FROM babel_328_vu_t1 D
OUTER babel_328_vu_t2 E
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near 'babel_328_vu_t2' at line 2 and character position 6)~~


SELECT * FROM babel_328_vu_t1 d
CROSS APPLY (SELECT * FROM babel_328_vu_t2)
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: subquery in APPLY must have an alias)~~


SELECT * FROM babel_328_vu_t1 d
OUTER APPLY (SELECT * FROM babel_328_vu_t2)
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: subquery in APPLY must have an alias)~~


SELECT * FROM babel_328_vu_t1 d
CROSS APPLY (VALUES (3,3),(4,4))
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: VALUES in APPLY must have an alias)~~


SELECT * FROM babel_328_vu_t1 d
OUTER APPLY (VALUES (3,3),(4,4))
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: VALUES in APPLY must have an alias)~~

